--- a/META.yml
+++ b/META.yml
@@ -13,7 +13,7 @@ build_requires:
   strict: 0
   warnings: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.30
+  Module::Build::Tiny: 0.019
 dynamic_config: 0
 generated_by: 'Dist::Zilla version 4.300033, CPAN::Meta::Converter version 2.130880'
 license: perl
@@ -24,10 +24,9 @@ name: Build-Simple
 requires:
   Carp: 0
   File::Path: 0
-  List::MoreUtils: 0
   Moo: 0
   perl: 5.006
 resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Build-Simple
   repository: git://github.com/Leont/build-simple.git
-version: 0.001
+version: 0.002
